--- a/index.html
+++ b/index.html
@@ -4,8 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why to be a Programmer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <h4>Irtisam Irsal</h4>
+            <button>Download Resume</button>
+
+        </nav>
+
+
+
+    </header>
+
+    <main>
+        <section class="banner-bg"><div class="banner">
+            <img src="assets/Group.png" alt="">
+            <h2 class="dark-blue">"In the near future, I hope to <br>become a Developer."</h2>
+            <p class="dark-blue"> Coding is not just a job, but a craft, a hobby, and a way of expressing yourself. When you code, you solve problems, create value, and learn new skills.</p>
+            <button>Contact with me</button>
+        </div></section>
+
+
+
+
+
+
+
+    </main>
+
+    <footer>
+
+
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
 </body>
 </html>
