added a target section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,40 @@
        
         </section>
 
-        
+        <!-- Description section -->
+     <section class="description-sec">
+        <h2>My Dream</h2>
+        <p>My dream is to complete the course of Programming Hero with Jankar Mahbub very clearly and to get a  nice job.
+        </p>
+        <iframe width="1076" height="550" src="https://www.youtube.com/embed/JUwePydwbUI?si=pIEepo0mubVWodCO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+     </section>
+
+     <!-- my target section -->
+      <section class="target-section">
+        <div class="target-head"><h2>My Current Target</h2>
+        <p>My current target is to complete HTML CSS JavaScript</p></div>
+        <section class="target-sec-div"><div class="card">
+            <img  src="assets/html.png" alt="">
+            <h4>HTML</h4>
+            <p>HTML is the standard markup language for Web pages. With HTML you can create your own Website. HTML is easy to learn </p>
+            <a href="https://www.w3schools.com/html/">Learn More</a>
+        </div>
+        <div class="card">
+            <img src="assets/css.png" alt="">
+            <h4>CSS</h4>
+            <p> CSS is the language we use to style an HTML document. CSS describes how HTML elements should be displayed. </p>
+            <a href="https://www.w3schools.com/css/">Learn More</a>
+        </div>
+        <div class="card">
+            <img src="assets/js.png" alt="">
+            <h4>Java Script</h4>
+            <p>JavaScript is a scripting language that enables you to create dynamically updating content, control multimedia, animate images, and pretty much everything else.</p>
+            <a href="https://www.w3schools.com/js/">Learn More</a>
+        </div> </section>
+        <hr>
+ </section>
+
 
 
 
