added all body and footer

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style/style.css">
+<link rel="stylesheet" type="text/css" href="style/style.css"/>
 </head>
 <body>
     <header>
         <nav>
             <h4>Irtisam Irsal</h4>
-            <button>Download Resume</button>
+            <button><a href="">Download Resume</a></button>
 
         </nav>
 
@@ -26,7 +26,7 @@
             <img src="assets/Group.png" alt="">
             <h2 class="dark-blue">"In the near future, I hope to <br>become a Developer."</h2>
             <p class="dark-blue"> Coding is not just a job, but a craft, a hobby, and a way of expressing yourself. When you code, you solve problems, create value, and learn new skills.</p>
-            <button>Contact with me</button>
+            <button ><a href="#link">Contact with me</a></button>
         </div></section>
         <!-- info section -->
 
@@ -106,6 +106,15 @@
         </div> </section>
         <hr>
  </section>
+ <hr>
+
+
+ <section class="support-sec">
+<h3>Need Support</h3>
+<p>Any query ask here and you can get the best solution</p>
+<div class="support-sec-form"><form action="" ><input placeholder="Ask any query " ></form><button>Submit</button> </div>
+
+ </section>
 
 
 
@@ -116,7 +125,12 @@
 
     </main>
 
-    <footer>
+    <footer id="link">
+        <h5> Contact with me by the accounts   </h5>
+       <div > <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt=""></a>
+        <a href="https://github.com/" target="_blank"><img src="assets/github.png" alt=""></a>
+        <a href="https://www.linkedin.com/" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a>
+        </div>
 
 
     </footer>
